# artbox

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md
.github/workflows/: docs.yml  publish.yml
assets/fonts/: miniwi.flf  terminus.flf
docs/: astro.config.mjs  package-lock.json  package.json
docs/.astro/: content-modules.mjs  data-store.json  settings.json
docs/preview-wasm/: Cargo.toml  README.md
docs/preview-wasm/src/: main.rs
docs/public/wasm/: artbox-preview.wasm
docs/src/components/: ArtboxPlayground.tsx  ArtboxPreview.tsx
docs/src/content/docs/: index.mdx
docs/src/content/docs/getting-started/: quick-start.mdx
docs/src/content/docs/guides/: cli.mdx  colors-and-gradients.mdx  images.mdx  live-preview.mdx  ratatui.mdx  sprites.mdx  text-and-fonts.mdx
docs/src/content/docs/reference/: api.mdx  feature-flags.mdx
docs/src/styles/: playground.css
examples/: artbox.rs  demo_artbox.rs  demo_gradient.rs  demo_image.rs  demo_sprite_gradients.rs  demo_tui.rs  gradient.rs  image.rs  playground.rs  print.rs  sprite_gradients.rs  tui.rs
scripts/: demo_fonts.sh  demo_gradient.sh  demo_pulse.sh  demo_rainbow.sh  demo_wave.sh  showcase_all.sh  showcase_font_set.sh
src/: color.rs  fonts.rs  images.rs  lib.rs  sprites.rs  styled.rs
src/images/: ascii.rs
src/integrations/: mod.rs  ratatui.rs
