[package]
name = "artbox"
version = "0.1.0"
edition = "2021"
description = "Render FIGlet text into a bounded rectangle with colors and gradients"
license = "MIT"
repository = "https://github.com/dmk/artbox"
documentation = "https://dmk.github.io/artbox/"
keywords = ["figlet", "ascii-art", "tui", "ratatui"]
categories = ["command-line-interface", "text-processing"]

[features]
default = ["ratatui"]
ratatui = ["dep:ratatui"]
images = ["dep:base64", "dep:image"]

[dependencies]
figlet-rs = "0.1"
unicode-width = "0.1"
ratatui = { version = "0.29", optional = true }
base64 = { version = "0.22", optional = true }
image = { version = "0.25", optional = true }

[dev-dependencies]
clap = { version = "4.5.23", features = ["derive"] }
